@@ -2,7 +2,7 @@
 ##
 ## xdg/automake.am for HPIInfo
 ##
-##   (C) Copyright 2015 Fred Gleason <fredg@paravelsystems.com>
+##   (C) Copyright 2015-2021 Fred Gleason <fredg@paravelsystems.com>
 ##
 ##   This program is free software; you can redistribute it and/or modify
 ##   it under the terms of the GNU General Public License version 2 as
@@ -20,26 +20,24 @@
 ## Use automake to process this into a Makefile.in
 
 install-exec-am:	
+	./install_usermode.sh install $(DESTDIR) $(prefix)
 	mkdir -p $(DESTDIR)@prefix@/share/applications
-	cp hpiinfo.desktop $(DESTDIR)@prefix@/share/applications/
-	mkdir -p $(DESTDIR)/etc/pam.d
-	cp hpiinfo-root-pam $(DESTDIR)/etc/pam.d/hpiinfo-root
-	mkdir -p $(DESTDIR)/etc/security/console.apps
-	cp hpiinfo-root-consolehelper $(DESTDIR)/etc/security/console.apps/hpiinfo-root
-	rm -f $(DESTDIR)$(prefix)/bin/hpiinfo-root
-	mkdir -p $(DESTDIR)$(prefix)/bin
-	ln -s /usr/bin/consolehelper $(DESTDIR)$(prefix)/bin/hpiinfo-root
+	cp @HPIINFO_DESKTOP_FILE@ $(DESTDIR)@prefix@/share/applications/hpiinfo.desktop
 
 uninstall-local:	
 	rm -f $(DESTDIR)@prefix@/share/applications/hpiinfo.desktop
-	rm -f $(DESTDIR)/etc/security/console.apps/hpiinfo-root
-	rm -f $(DESTDIR)$(prefix)/bin/hpiinfo-root
+	./install_usermode.sh uninstall $(DESTDIR) $(prefix)
 
 EXTRA_DIST = hpiinfo.desktop\
+             hpiinfo-root.desktop\
+             hpiinfo-sudo.desktop\
              hpiinfo-root-consolehelper\
-             hpiinfo-root-pam
+             hpiinfo-root-pam\
+             install_usermode.sh.in
 
 CLEANFILES = *~
+
+DISTCLEANFILES = install_usermode.sh
 
 MAINTAINERCLEANFILES = *~\
                        Makefile.in
